+Show Filetype and Encoding information in statusbar (from shaohao)
+Double click on statusbar line/column section opens goto line control (shaohao)
+Add support for newLISP (from Jeff)
+Add Czech translation (contributed by Tomas Fryda)
+Numerous general Ui improvements
+Add right click context menu to tab area for access to some quick file options
+Add To Uppercase and To Lowercase items to text buffer context menu
+Shelf tabs can have icons in them

BUG FIXES:
+Properly update titlebar and other contexts when page change is initiated from
an error hotspot in Launch window.
+Fix source installer not installing pygments package
+Fix focus not getting set to text buffer when switching tabs with ctrl+tab on
Windows.
+Fix some issues with the ipc server failing to connect
+Fix some export issues in the Style Editor
+Escape will properly hide the goto line control when it has focus
+Add missing mac icons to source bundles
+Bookmark margin getting over flow from line number margin when the number of
lines in the document exceeds 10,000.
+Full line number not being visible when lines exceed 1,000,000
+Save As dialog not populating current file name under all execution paths

#-----------------------------------------------------------------------------#

VERSION 0.3.38
DATE 08/07/2008
14th Alpha Release

NEWS:

This release adds a number of new features and is the start of a platform for
future enhancements. The main items added in this round are the enhancements to
the syntax management system to allow for extension through custom lexers and 
providing language specific auto-indentation support. The ground work of an
IPC server has also been added to allow for interprocess communication and some
remote control support for controlling Editra from other applications.


NEW: [features/improvements]
+Add IPC server for remotely controlling Editra and sending commands
+Add support for using container lexers to extend supported languages